[tool.poetry]
name = "dashboard-dev"
version = "0.1.0"
description = ""
authors = ["sujoju <sungj1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
panel = "^1.2.3"
matplotlib = "^3.8.0"
jupyterlab = "^4.0.7"
ipywidgets = "^8.1.1"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
